--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,5 +21,5 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
     - run: node --version
+    - run: node -p process.versions
