--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
   "main": "index.js",
   "repository": "https://github.com/baparham/node-dependencies.git",
   "author": "Brad Parham <baparham@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^17.0.18",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
+  },
+  "scripts": {
+    "merge": "ts-node -s scripts/merge.ts"
+  }
 }
