--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    # Run every two hours
+    - cron:  '0 0/2 * * *'
 
 jobs:
   collect:
