--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-dependencies",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "index.json",
   "repository": "https://github.com/baparham/node-dependencies.git",
   "author": "Brad Parham <baparham@gmail.com>",
   "license": "MIT",
