--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,15 +15,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 17.x, 18.x, 19.x]
+        node-version: [16, 17, 18, 19]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3.1.0
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v3.5.1
       with:
         node-version: ${{ matrix.node-version }}
     - run: node -p "JSON.stringify(process.versions)" > ${{ matrix.node-version }}.json
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v3.1.1
       with:
         name: deps-${{ matrix.node-version }}
         path: ${{ matrix.node-version }}.json
@@ -32,12 +32,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [collect]
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 17.x
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3.1.0
+      - name: Use Node.js 19
+        uses: actions/setup-node@v3.5.1
         with:
-          node-version: 17.x
-      - uses: actions/download-artifact@v3
+          node-version: 19
+      - uses: actions/download-artifact@v3.0.1
         with:
           path: collected-json
       - run: yarn install
